--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,7 +1,12 @@
 <h2>Project List</h2>
 
-<div *ngFor="let project of projects" (click)="goToDetailPage(project)" class="panel panel-default">
+<div *ngFor="let project of projects | async"  class="panel panel-default">
   <div class="panel-body">
-    <h3><em>{{project.title}}</em> by {{project.managers}}</h3>
+    <h3 (click)="goToDetailPage(project)"><em>{{project.title}}</em> by {{project.managers}}</h3>
+    <div *ngIf="currentRoute === '/admin'">
+      <h5>{{project.description}}</h5>
+      <hr>
+      <app-edit-project [selectedProject]="project"></app-edit-project>
+    </div>
   </div>
 </div>
